syntax = "proto3";

package service;

option csharp_namespace = "Centurion.Services";

import "data/nested.proto";

service Guild {
    rpc OrderCoffee (OrderCoffeeRequest) returns (OrderCoffeeResponse);
    rpc ReturnCoffee (ReturnCoffeeRequest) returns (ReturnCoffeeResponse);
}

message OrderCoffeeRequest {
    uint64 id = 1;
    data.CoffeeData.CoffeeType coffee_type = 2;
}

message OrderCoffeeResponse {
    uint64 id = 1;
    data.CoffeeData ordered_coffeee = 2;
}

message ReturnCoffeeRequest {
    uint64 id = 1;
    data.NestedA.NestedB.NestedC.NestedEnumD enum_d = 2;
}

message ReturnCoffeeResponse {}