using Google.Protobuf;

namespace Centurion.Services
{
    
    public sealed partial class OrderCoffeeRequest : IMessage<OrderCoffeeRequest>
    {

    }
    
    public sealed partial class OrderCoffeeResponse : IMessage<OrderCoffeeResponse>
    {

    }
    
    public sealed partial class ReturnCoffeeRequest : IMessage<ReturnCoffeeRequest>
    {

    }
    
    public sealed partial class ReturnCoffeeResponse : IMessage<ReturnCoffeeResponse>
    {

    }
    
}